test/errors/tupleExpandNamedArgs.compopts
--detailed-errors # tupleExpandNamedArgs-detailed.good
--no-detailed-errors # tupleExpandNamedArgs-brief.good
